<resources>
    <string name="app_name">NeoLink</string>

    //MainActivity
    <string name="titulo1">Neo</string>
    <string name="titulo2">Link</string>
    <string name="usuario">Email</string>
    //Notificaciones
    <string name="channel_name">NeoLink</string>
    <string name="channel_description">Alertas acerca de su equipo "NeoLink"</string>
    <string name="CHANNEL_ID">487</string>
    <string name="notificationID">0</string>
    //IMAGEN DE FONDO
    <string name="bg">Imagen de fondo</string>
    <string name="logoportada2">El logo de la compañia</string>

    //Correo Electrónico
    <string name="contraseña">Contraseña</string>
    //Contraseña
    <string name="sesion">Recordarme</string>
    <string name="botoningreso">Iniciar Sesión</string>
    <string name="creaccuenta">Crear Cuenta</string>
    <string name="recuperarcuenta">Recuperar Contraseña</string>

    //Actividad Recuperar
    <string name="TituloRecuperar">Recuperación de la contraseña</string>
    <string name="recuperarRecuperar">Ingrese su correo</string>
    <string name="botonRecuperar">Recuperar contraseña</string>
    <string name="volverRecuperar">Volver</string>

    //Actividad Registro 1
    <string name="TituloRegistroOne">Registrar cuenta</string>
    <string name="CorreoRegistroOne">Email</string>
    <string name="IngresoCorreoRegistroOne">Ingrese su correo electrónico</string>
    <string name="ContraseñaRegistroOne">Contraseña</string>
    <string name="IngresoContraseñaRegistroOne">Ingrese una contraseña</string>
    <string name="RepitaContraseñaRegistroOne">Repita su contraseña</string>
    <string name="RepitaIngresoContraseñaRegistroOne"> Repita su contraseña</string>
    <string name="botonRegistroOne"> Siguiente</string>

    //Actividad Registro 2
    <string name="TituloRegistroTwo">Registrar cuenta</string>
    <string name="CodigoRegistroTwo">Código de confirmación</string>
    <string name="IngresoCodigoRegistroTwo">Ingrese su codigo</string>
    <string name="MensajeRegistroTwo">Revise su correo y copie el código que le hemos enviamos</string>

    //Actividad Registro 3
    <string name="TituloRegistroThree">Ingrese su ticket</string>
    <string name="MensajeRegistroThree">El ticket es un código único que viene incluido en la caja</string>
    <string name="MensajeRegistroThree2">El ticket es generado por el dueño del neolink al que se quiere vincular</string>
    <string name="MensajeRegistroErrorThree">Código invalido</string>
    <string name="radiobuttonneolink">Dueño neolink</string>
    <string name="radiobuttonfamiliar">Vincular cuenta</string>
    <string name="appname">NeoLink</string>

    //Navigation Drawer Menu
    <string name="home">Principal</string>
    <string name="mapa">Mapa</string>
    <string name="lista">Configuración de Dispositivos</string>
    <string name="graficos">Gráficos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="easyconnect">Easy Connect</string>
    <string name="configuracion">Configuración General</string>
    <string name="llamanos">Contáctanos</string>
    <string name="version">Versión</string>
    <string name="neolinktit">NeoLink +</string>
    <string name="salida">Salir</string>
    <string name="comentarios">Comentarios</string>
    <string name="plagas">Servicio de plagas</string>

    //datos generales
    <string name="primernombre">Humedad del suelo</string>
    <string name="segundonombre">Temperatura del suelo</string>
    <string name="tercernombre">Conductividad EC</string>

    <string name="tituloprincipal2">S002 15cm</string>
    <string name="primernombre2">Potencial hidrico</string>
    <string name="segundonombre2">Temperatura</string>

    <string name="tituloprincipal3">Condiciones Ambientales</string>
    <string name="primernombre3">Presión barométrica</string>
    <string name="segundonombre3">Humedad relativa</string>
    <string name="cuartonombre3">Temperatura de bulbo seco</string>
    <string name="quintonombre3">Voltaje solar</string>
    <string name="sextonombre3">Batería</string>
    <string name="septimonombre3">Temperatura interna</string>
    <string name="octavonombre3">Altitud</string>

    //cardview
    <string name="cardtitle">NeoLink</string>
    <string name="cardtitle2">NeoNodo</string>

    //dialogo
    <string name="dailogtitle">Agregue el código del NeoLink</string>
    <string name="dailogtitle2">Agregue el código del Neonodo</string>
    <string name="aceptardialog">Enviar</string>
    <string name="cancelardialog">Cancelar</string>
    <string name="desde">Desde: </string>
    <string name="hasta">Hasta: </string>

    //Grafico
    <string name="sensorPotencialMatricial">Potencial Matricial (KPa)</string>
    <string name="sensorTemperatura">Temperatura (°C)</string>
    <string name="sensordeph">PH (pH)</string>
    <string name="sensornitrato">Nitrato (mg/L)</string>
    <string name="sensorfosfato">Fosfato (mg/L)</string>
    <string name="sensorpotasio">Potasio (mg/L)</string>
    <string name="Bateria">Energía (V)</string>
    <string name="Presionbarometrica">Presión Barométrica (kPa)</string>
    <string name="Humedadrelativa">Humedad Relativa (%)</string>
    <string name="Temperaturadevulvoseco">Temperatura de bulbo seco (°C)</string>
    <string name="Humedaddelsuelo">Humedad del Suelo (raw)</string>
    <string name="Temperaturadelsuelo">Temperatura del Suelo (°C)</string>
    <string name="ConductividadElectricadelporo">Conductividad Eléctrica del Poro (uS/cm)</string>
    <string name="Contenidovolumetricodelagua">Contenido Volumétrico de agua (m3/m3)</string>
    <string name="Conductividaddelsuelo">Conductividad Eléctrica del Suelo (uS/cm)</string>
    <string name="Rosadevientos">Velocidad del Viento (m/s)</string>
    <string name="atmos">Atmos</string>
    <string name="sensoresgraphs">Sensores</string>
    <string name="desplegarcontentdes">Icono de despliegue</string>
    <string name="plegarcontentdes">Icono de pliegue</string>

    //Menu de configuraciones
    <string name="minutos">min</string>
    <string name="unidadprofundidad">cm</string>
    <string name="lim">Lim</string>
    <string name="Titutloconfiguraciones">Configuraciones</string>
    <string name="Generales">Configuraciones Generales</string>
    <string name="sonido">Beep del sistema</string>
    <string name="tiempoentredatos">Tiempo de muestreo (min)</string>
    <string name="portRQ">Pedir actualización de los puertos</string>
    <string name="gpsRQ">Pedir actualización del GPS</string>
    <string name="ConfiguracionesEspecificas">Información del Dispositivo</string>
    <string name="Wifi_pss">Password del WIFI</string>
    <string name="Wifi_SSID">Nombre del WIFI</string>
    <string name="firmware">Firmware del equipo</string>
    <string name="GPS">Localización</string>
    <string name="LastUpload">Última toma de datos</string>
    <string name="Limites">Límites</string>
    <string name="Puerto1">Puerto 1</string>
    <string name="Puerto2">Puerto 2</string>
    <string name="Puerto3">Puerto 3</string>
    <string name="Puerto4">Puerto 4</string>
    <string name="Sensork">Sensor K</string>
    <string name="Sensorkpotencialmatricial">Potencial Matricial</string>
    <string name="Sensorktemperatura">Temperatura</string>
    <string name="Sensorg">Sensor G</string>
    <string name="Sensorstate">Sensor</string>
    <string name="Limitesuperior">Limite Superior</string>
    <string name="Limiteinferior">Limite Inferior</string>
    <string name="Limiteespecial">AU:Agua Útil</string>
    <string name="Puertosactivos">Puertos Activos</string>
    <string name="profundidadtitulo">Profundidad</string>

    //Registro
    <string name="tituloregistro">Comentarios</string>
    <string name="registroeditar">Boton para ediitar</string>
    <string name="registroborrar">boton para borrar</string>
    //contactus
    <string name="contactanos">Contáctanos</string>
    <string name="paginaweb"><a href="https://www.greenbird.pe/">www.greenbird.pe/</a></string>
    <string name="paginawebdescrip">Icono de la pagina web</string>
    <string name="facebook">NeoLink IoT</string>
    <string name="correo">team@greenbird.pe</string>
    <string name="correodescrip">Icono del correo</string>
    <string name="telefono">(+51) 983–569–250</string>
    <string name="telefonodescrip">Icono del telefono</string>
    <string name="direccion">LA LIBERTAD\nLos Corales 289, Trujillo 13011</string>
    <string name="dirreciondescrip">Icono de la direccion</string>
    <string name="direccion2">LIMA\nCalle Cmdt. Ladislao Espinar 250 San Miguel</string>
    <string name="dirreciondescrip2">Icono de la segunda direccion</string>

    //Dialogagragarcomentario
    <string name="titulodeldialogocomentario">Agregue un comentario</string>
    <string name="hintdeldialogocomentario">Ingrese su comentario</string>

    //Dialogoeditarcomentario
    <string name="titutlodeldialogocomentarioparaeditar">Edite su comentario</string>

    //Configuracion cuenta
    <string name="tituloconfiguracioncuenta">Configuración General</string>
    <string name="titulolinkeo">Manejo de cuentas vinculadas</string>
    <string name="titulodebienvenidadrive">Binvenido, ""</string>
    <string name="elegirfecha">Elija el tiempo a reportar</string>
    <string name="drivelink">Aquí aparecerá el link de su reporte:</string>
    <string name="token">Código de vínculo:</string>
    <string name="botongenerar">Generar</string>
    <string name="botonauthgoogle">Ingrese con su cuenta Drive</string>
    <string name="botonconfirmacionaceptadadecuenta">Cuenta confirmada</string>
    <string name="imagenborrar">La imagen para borrar la cuenta</string>
    <string name="tituloparagenerarreporte">Manejo de reportes</string>

    //adaptadoresdelimites
    <string name="iconoplegableplegado">Icono plegable plegado</string>
    <string name="iconoplegabledesplegado">Icono plegable plegado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
