<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nvdtop"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mapita"
            android:title="@string/mapa" />
        <item
            android:id="@+id/listita"
            android:title="@string/lista" />
        <item
            android:id="@+id/grafiquitos"
            android:title="@string/graficos" />
        <item
            android:id="@+id/registrodealertas"
            android:title="@string/notificaciones" />
    </group>

    <group
        android:id="@+id/ndgruponeolinkconect"
        android:checkableBehavior="single">
        
        <item
            android:title = "@string/configuracion"/>
    </group>

    <group
        android:id="@+id/ndgrupous"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contactanos"
            android:title="@string/llamanos" />
        
    </group>

    <group
        android:id="@+id/ndsalida"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainActivity"
            android:title="@string/salida" />
    </group>

</menu>