<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorfondito"
    tools:context="com.greenbird.neolink_app.contactanos">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:cardCornerRadius="@dimen/cardRadio"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margencard"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paginaweb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:gravity="center"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/Tamañotexto"
                android:text="@string/contactanos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imagenweb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/paginawebdescrip"
                    android:layout_gravity="center"
                    android:src="@drawable/webicon1"
                    app:tint="@color/colorojo" />

                <TextView
                    android:id="@+id/textoweb"
                    android:layout_width="0dp"
                    android:autoLink="email"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="7"
                    android:text="@string/paginaweb" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/correodescrip"
                    android:layout_weight="1"
                    android:src="@drawable/mailicon"
                    app:tint="@color/colorojo" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:autoLink="email"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="7"
                    android:text="@string/correo" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/telefonodescrip"
                    android:layout_gravity="center"
                    android:src="@drawable/telefono_icon"
                    app:tint="@color/colorojo" />

                <TextView
                    android:layout_width="0dp"
                    android:autoLink="phone"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="7"
                    android:text="@string/telefono" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/dirreciondescrip"
                    android:src="@drawable/direccion_icon"
                    app:tint="@color/colorojo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:gravity="center"
                    android:layout_weight="7"
                    android:text="@string/direccion" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:contentDescription="@string/dirreciondescrip2"
                    android:src="@drawable/direccion_icon"
                    app:tint="@color/colorojo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoLink="map"
                    android:gravity="center"
                    android:layout_weight="7"
                    android:text="@string/direccion2" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>