<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrotwo">

    <ImageView
        android:id="@+id/bgprincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg2final"
        android:contentDescription="@string/bg" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layoutredondeado">

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/imagenlogonuevocolor"
            android:scaleType="fitCenter"
            android:contentDescription="@string/logoportada2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:gravity="center|end"
                android:text="@string/titulo1"
                android:textColor="#849AAF"
                android:textColorLink="#849AAF"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:gravity="center|start"
                android:text="@string/titulo2"
                android:textColor="#849AAF"
                android:textSize="32sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/tituloregtwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/TituloRegistroTwo"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/correotituloregistrotwo"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/CodigoRegistroTwo"
                android:textSize="14sp"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutcodigoregistrotwo"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                app:hintEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearance.Design.Counter.">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codigorecuperartwo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:hint="@string/IngresoCodigoRegistroTwo"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:theme="@style/camposdeingreso" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/mensajeregistrotwo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily = "@font/lato"
                android:textSize = "14sp"
                android:gravity = "center"
                android:text="@string/MensajeRegistroTwo"
                android:textColor="#000000"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_registrotwo"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/boton"
                android:fontFamily="@font/lato"
                android:onClick="siguiente"
                android:text="@string/botonRegistroOne"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/volvertwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:onClick="volver2"
            android:text="@string/volverRecuperar"
            android:textColor="#000000" />


    </LinearLayout>

</android.widget.RelativeLayout>