<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenfiedl2"
    tools:context=".recuperar">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layoutredondeado">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:gravity="center|end"
                android:text="@string/titulo1"
                android:textColor="#849AAF"
                android:textColorLink="#849AAF"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:gravity="center|start"
                android:text="@string/titulo2"
                android:textColor="#73AA86"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mensaje_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TituloRecuperar"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutRecuperar"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correoRecuperar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/recuperarRecuperar"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:theme="@style/camposdeingreso" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/botonRecuperar"
                android:textSize="14sp"
                android:fontFamily="@font/lato"
                android:background="@drawable/boton"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:onClick="BotonRecuperar"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:onClick="volver"
            android:text="@string/volverRecuperar"
            android:textSize="14sp" />


    </LinearLayout>

</android.widget.RelativeLayout>